infrastructure/services/kafka/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: same-service
  namespace: kafka
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              service: kafka
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: same-service
  namespace: kafka-connect
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              service: kafka
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: same-service
  namespace: kafka-streams
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              service: kafka
